[gd_scene load_steps=9 format=3 uid="uid://d15kradcoo18b"]

[ext_resource type="Script" path="res://Player.gd" id="1_u58uy"]
[ext_resource type="Texture2D" uid="uid://ds4fob85uvsk4" path="res://icon.svg" id="2_ft66x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cw6lv"]
size = Vector2(44, 44)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_67em4"]

[sub_resource type="LabelSettings" id="LabelSettings_iu0m5"]
font_size = 20
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_24mx4"]
resource_name = "Powerup"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PowerupText:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-38.5, -15.5), Vector2(-38.5, -65), Vector2(-38.5, -15.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PowerupText:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1), Vector2(1e-05, 1e-05)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PowerupText:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_kaytv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PowerupText:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-38.5, -15.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PowerupText:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PowerupText:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h2mj0"]
_data = {
"Powerup": SubResource("Animation_24mx4"),
"RESET": SubResource("Animation_kaytv")
}

[node name="Player" type="CharacterBody2D"]
collision_mask = 6
script = ExtResource("1_u58uy")

[node name="Sprite2d" type="Sprite2D" parent="."]
scale = Vector2(0.35, 0.35)
texture = ExtResource("2_ft66x")

[node name="CollisionShape2d" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_cw6lv")

[node name="Area2d" type="Area2D" parent="."]
collision_mask = 16
monitorable = false

[node name="CollisionShape2d" type="CollisionShape2D" parent="Area2d"]
shape = SubResource("RectangleShape2D_67em4")

[node name="HeatTimer" type="Timer" parent="."]
autostart = true

[node name="PowerupText" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.5
offset_top = -15.5
offset_right = 38.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(38.5, 15.5)
text = "HEALTH"
label_settings = SubResource("LabelSettings_iu0m5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_h2mj0")
}

[connection signal="area_entered" from="Area2d" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="HeatTimer" to="." method="_on_heat_timer_timeout"]
